Fix info box alignment

--- a/src/scss/parts/frontend/custom.scss
+++ b/src/scss/parts/frontend/custom.scss
@@ -35,6 +35,7 @@
 	vertical-align: middle;
 }
 
+.top-icon .aio-icon-description,
 .top-icon .aio-icon-header{
 	text-align: left;
 }
